2025-XX-XX   3.2.1:
-------------------
  * add double precision floating point number example


2025-03-19   3.2.0:
-------------------
  * add `util.xor_indices()`, #229
  * add Hamming code example


2025-03-06   3.1.1:
-------------------
  * updated `pythoncapi_compat.h` for pypy3.11 support, see #227
  * use `__builtin_parityll()` when available in `util.parity()`
  * add `parity_64()` to header
  * simplify some tests
  * add LFSR example


2025-02-19   3.1.0:
-------------------
  * allow mask assignment to bitarrays, see #225
  * add missing masked operations to pyi-file
  * refactor `resize()` and avoid overallocation when downsizing buffer
  * update `build_wheels.yml`
  * fix some typos
  * minor simplifications
  * rename `growth/` example to `resize/` and add tests for `resize()`
  * update gene example
  * add comments


2024-10-15   3.0.0:
-------------------
  * see [Bitarray 3 transition](bitarray3.rst)
  * remove Python 2.7 support
  * `.decode()` now returns iterator (equivalent to past `.iterdecode()`)
  * `.search()` now returns iterator (equivalent to past `.itersearch()`)
  * remove `.iterdecode()` and `.itersearch()`
  * remove `util.rindex()`, use `.index(..., right=1)` instead,
    deprecated since 2.9
  * remove `util.make_endian()`, use `bitarray(..., endian=...)` instead,
    deprecated since 2.9
  * remove hackish support for `bitarray()` handling unpickling,
    see detailed explaination in #207 - closes #206


2024-10-10   2.9.3:
-------------------
  * add official Python 3.13 support
  * update cibuildwheel to 2.21.3
  * minor simplifications
  * fix some typos


2024-01-01   2.9.2:
-------------------
  * optimize initialization from strings by not constantly resizing buffer
  * optimize `util.hex2ba()` and `util.base2ba()` by avoiding unnecessary
    copies
  * optimize `util.base2ba()` and `util.ba2base()` for `n=16` (hexadecimal)


2023-12-23   2.9.1:
-------------------