@@ -78,7 +78,9 @@ class bitarray:
 
     def setall(self, value: int) -> None: ...
     def sort(self, reverse: int) -> None: ...
-    def to01(self) -> str: ...
+    def to01(self,
+             group: int = ...,
+             sep: str = ...) -> str: ...
     def tobytes(self) -> bytes: ...
     def tofile(self, f: BinaryIO) -> None: ...
     def tolist(self) -> list[int]: ...
