@@ -3080,19 +3080,54 @@ class MethodTests(unittest.TestCase, Util):
 
 class To01Tests(unittest.TestCase, Util):
 
-    def test_basic(self):
+    def test_no_grouping(self):
         a = bitarray()
-        self.assertEqual(a.to01(), '')
-        self.assertIsInstance(a.to01(), str)
+        self.assertEqual(a.to01(1), "")
 
-        a = bitarray('101')
-        self.assertEqual(a.to01(), '101')
-        self.assertIsInstance(a.to01(), str)
+        a = bitarray("100011110")
+        for s in [a.to01(), a.to01(0), a.to01(0, "X"), a.to01(1, ""),
+                  a.to01(group=0), a.to01(sep="X"), a.to01(group=2, sep="")]:
+            self.assertIsInstance(s, str)
+            self.assertEqual(len(s), len(a))
+            self.assertEqual(s, "100011110")
+
+    def test_examples(self):
+        a = bitarray("0000 1111 0011 0101")
+        self.assertEqual(a.to01(1, "-"), "0-0-0-0-1-1-1-1-0-0-1-1-0-1-0-1")
+        self.assertEqual(a.to01(2, sep='+'), "00+00+11+11+00+11+01+01")
+        self.assertEqual(a.to01(3), "000 011 110 011 010 1")
+        self.assertEqual(a.to01(group=4, sep="_"), "0000_1111_0011_0101")
+        self.assertEqual(a.to01(group=5, sep='.'), "00001.11100.11010.1")
+        self.assertEqual(a.to01(group=6), "000011 110011 0101")
+        self.assertEqual(a.to01(7), "0000111 1001101 01")
+        self.assertEqual(a.to01(8, ", "), "00001111, 00110101")
+        self.assertEqual(a.to01(9, "ABC"), "000011110ABC0110101")
+
+    def test_wrong_args(self):
+        a = bitarray("1101100")
+        self.assertRaises(TypeError, a.to01, None)
+        self.assertRaises(ValueError, a.to01, -1)
+        self.assertRaises(TypeError, a.to01, foo=4)
+        self.assertRaises(TypeError, a.to01, 2, None)
+        self.assertRaises(TypeError, a.to01, 4, b"_")
+
+    def test_sep(self):
+        for a in self.randombitarrays():
+            sep = "".join(chr(randint(32, 126))
+                              for _ in range(randint(0, 10)))
+            self.assertEqual(a.to01(1, sep), sep.join(str(v) for v in a))
 
     def test_random(self):
         for a in self.randombitarrays():
-            b = bitarray(a.to01())
-            self.assertEqual(a, b)
+            n = len(a)
+            group = randint(0, 10)
+            nsep = randint(0, 5)
+            s = a.to01(group, nsep * " ")
+            self.assertEqual(a, bitarray(s))
+            nspace = s.count(" ")
+            self.assertEqual(len(s), n + nspace)
+            self.assertEqual(nspace,
+                             nsep * ((n - 1) // group) if group and n else 0)
 
 # ---------------------------------------------------------------------------
 
